--- a/index.html
+++ b/index.html
@@ -382,6 +382,7 @@
         <nav>
             <a href="#education" class="nav-btn">EDUCATION</a>
             <a href="#experience" class="nav-btn">EXPERIENCE</a>
+            <a href="#lab-work" class="nav-btn">LAB WORK</a>
             <a href="#projects" class="nav-btn">PROJECTS</a>
             <a href="#contact" class="nav-btn">CONTACT</a>
         </nav>
@@ -485,6 +486,34 @@
                             <li>Gathered and organized program research and education outputs to produce detailed semi-annual progress reports to NASA.</li>
                             <li>Updated the MACES website and Center Director's lab website using HTML deployed on Squarespace.</li>
                             <li>Organized and recorded detailed notes for financial meetings and monthly staff meetings.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="lab-work">
+            <div class="section-window">
+                <div class="section-title-bar">
+                    <h2>â—† LAB WORK</h2>
+                </div>
+                <div class="section-content">
+                    <div class="experience-item">
+                        <h3>Research Focus Areas</h3>
+                        <p class="date">Selected highlights from lab roles</p>
+                        <ul>
+                            <li>Autonomous driving safety and driver-state modeling.</li>
+                            <li>Precision agriculture sensing and robotics field testing.</li>
+                            <li>Human factors lab studies and participant coordination.</li>
+                        </ul>
+                    </div>
+                    <div class="experience-item">
+                        <h3>Methods and Tools</h3>
+                        <p class="date">Hands-on lab workflow</p>
+                        <ul>
+                            <li>Data collection with sensors, cameras, and embedded systems.</li>
+                            <li>Model development and analysis in Python-based workflows.</li>
+                            <li>Collaboration with multi-disciplinary lab teams.</li>
                         </ul>
                     </div>
                 </div>
