more searchable additions

--- a/index.html
+++ b/index.html
@@ -4,6 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kianna Ng - Portfolio</title>
+    <meta name="description" content="Kianna Ng is a Ph.D. student in Electrical Engineering and Computer Science with research interests in human-centered AI, autonomous systems, and robotics.">
+    <meta name="author" content="Kianna Ng">
+    <meta name="robots" content="index, follow">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Kianna Ng - Portfolio">
+    <meta property="og:description" content="Ph.D. student in Electrical Engineering and Computer Science with research interests in human-centered AI, autonomous systems, and robotics.">
+    <meta property="og:image" content="images/headshotcropped.jpg">
+    <meta property="og:locale" content="en_US">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Kianna Ng - Portfolio">
+    <meta name="twitter:description" content="Ph.D. student in Electrical Engineering and Computer Science with research interests in human-centered AI, autonomous systems, and robotics.">
+    <meta name="twitter:image" content="images/headshotcropped.jpg">
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Kianna Ng",
+        "description": "Ph.D. student in Electrical Engineering and Computer Science with research interests in human-centered AI, autonomous systems, and robotics.",
+        "image": "images/headshotcropped.jpg",
+        "affiliation": {
+            "@type": "CollegeOrUniversity",
+            "name": "University of California, Merced"
+        },
+        "alumniOf": {
+            "@type": "CollegeOrUniversity",
+            "name": "University of California, Merced"
+        },
+        "sameAs": [
+            "https://www.linkedin.com/in/kianna-ng-1b95041aa/"
+        ]
+    }
+    </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@300;400;500;700&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet">
