--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Kianna Ng - Portfolio">
     <meta property="og:description" content="Ph.D. student in Electrical Engineering and Computer Science with research interests in human-centered AI, autonomous systems, and robotics.">
-    <meta property="og:image" content="images/headshotcropped.jpg">
+    <meta property="og:image" content="images/kianna_headshot.png">
     <meta property="og:locale" content="en_US">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Kianna Ng - Portfolio">
