--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Kianna Ng - Portfolio">
     <meta name="twitter:description" content="Ph.D. student in Electrical Engineering and Computer Science with research interests in human-centered AI, autonomous systems, and robotics.">
-    <meta name="twitter:image" content="images/headshotcropped.jpg">
+    <meta name="twitter:image" content="images/kianna_headshot.png">
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
         "@type": "Person",
         "name": "Kianna Ng",
         "description": "Ph.D. student in Electrical Engineering and Computer Science with research interests in human-centered AI, autonomous systems, and robotics.",
-        "image": "images/headshotcropped.jpg",
+        "image": "images/kianna_headshot.png",
         "affiliation": {
             "@type": "CollegeOrUniversity",
             "name": "University of California, Merced"
@@ -473,7 +473,7 @@
 
     <section class="hero">
         <div class="display-screen">
-            <img src="images/headshotcropped.jpg" alt="Headshot of Kianna Ng" class="hero-photo">
+            <img src="images/kianna_headshot.png" alt="Headshot of Kianna Ng" class="hero-photo">
             <h1>Kianna Ng</h1>
             <p class="intro">Ph.D. Student in Electrical Engineering and Computer Science</p>
             <p class="location">San Francisco, CA · GitHub: kiannang</p>
